# fastsearch

./: .env.template  .gitignore  README.md  cdk.json  env.yaml  fastsearch.code-workspace  pixi.toml
.github/backfill/: .env.template  launch_backfill.py  pyproject.toml
.github/workflows/: deploy.yaml  hub.yaml  ping.yaml
backend/: .dockerignore  Dockerfile  cache_model.py  database.py  generate.py  main.py  openapi.json  pyproject.toml  requirements.txt
backend/routes/: feedback.py
backend/routes/search/: __init__.py  model.py  route.py
backend/scripts/: cache_model.py  generate_openapi.py
backend/src/: app.py  main.py  model.py
backend/src/backend/: __init__.py  database.py
backend/src/backend/routes/: feedback.py  search.py
backend/src/backend/routes/search/: __init__.py  model.py  route.py
backend/utils/: generate.py
frontend/: app.config.ts  bun.lockb  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/writeup/: about.html  backend.html  deployment.html  favicon.icns  feedback.html  pipeline.html  scope.html  semantic.html  training.html
frontend/public/writeup/css/: main.css
frontend/src/: app.css  app.tsx  entry-server.tsx  root.css  root.tsx
frontend/src/components/: Navbar.css  Navbar.tsx  Results.tsx  Search.css  Search.tsx  Theater.css  Theater.tsx
frontend/src/components/writeup/: Nav.tsx  Title.tsx
frontend/src/lib/: Context.tsx  utils.ts
frontend/src/routes/: index.tsx  writeup.tsx
frontend/src/routes/writeup/: about.tsx  backend.tsx  deployment.tsx  feedback.tsx  pipeline.tsx  scope.tsx  semantic.tsx  training.tsx
frontend/src/styles/: Results.css  Search.css  Theater.css  Writeup.css
infra/: .env.template  .gitignore  app.py  cdk.json  constants.py  frontend.py  model_webhook.py  package-lock.json  package.json  pyproject.toml
infra/backend/: core.py  ecs.py  utils.py  vector_db.py
infra/src/infra/: __main__.py  config.py  frontend.py
infra/src/infra/backend/: core.py  ecs.py  utils.py
pipeline/: .env.template  pyproject.toml
pipeline/fastpipeline/: __init__.py
pipeline/fastpipeline/assets/: constants.py  indexing.py  scraping.py
pipeline/modal/: transcribe.py
pipeline/seeds/fastai_metadata/: courses.csv  lessons.csv
pipeline/seeds/transcripts/: -Scs4gbwWXg.json  -lx2shfA-5s.json  0AlSPyGWNr4.json  0Hi2r4CaHvk.json  0MI0Te7EgtA.json  0_BBRNYInx8.json  0frKXR-2PBY.json  0pWjZByJ3Lk.json  0rEOjih_hps.json  0v93qHDqq_g.json  1-NYPQw5THU.json  1b9tNPMSlNY.json  1kw8bpA9QmQ.json  1pEJOELcniY.json  25nC0n9ERq4.json  2A6js_EJ6MA.json  2uygOz2fORo.json  37sFIak42Sc.json  3TqN_M1L4ts.json  3jl2h9hSRvc.json  3oEb_fFmPnY.json  44pe47sB4BI.json  4J3aiVPI3Po.json  4u8FxNEDUeg.json  4xT6zEE4y8E.json  50QWRrsO8mM.json  56sIyFjihEc.json  5L3Ao5KuCC4.json  5_xFdhfUnvQ.json  5gCQvuznKn0.json  5py5M2DqcRc.json  5x51s_xuPDA.json  67FdzLSt4aA.json  6Bta1tXRUfM.json  6GvB5lZJqcE.json  6JGoes9_bPs.json  6StU6UtZEbU.json  6WbVn_gYwQo.json  6hoqZp0aJDY.json  6kwQEBMandw.json  (+194 more)
pipeline/src/fastpipeline/: io_managers.py  partitions.py  resources.py  sensors.py
pipeline/src/fastpipeline/assets/: metadata.py  transcription.py
