[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "numpy>=2.1.1",
    "onnxruntime>=1.19.2",
    "psycopg[binary]>=3.2.2",
    "pydantic>=2.9.2",
    "qdrant-client>=1.11.3",
    "sqlalchemy>=2.0.35",
    "transformers>=4.44.2",
]

[dependency-groups]
dev = [
    "ruff>=0.7.1",
]
