[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Dante Oz", email = "me@danteoz.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.3",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "qdrant-client>=1.12.1",
    "transformers>=4.47.0",
    "onnxruntime>=1.20.1",
    "numpy>=2.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
