[tool.poetry]
name = "fastinfra"
version = "0.1.0"
description = ""
authors = ["Dante Oz <me@danteoz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "2.88.0"
aws-cdk-aws-apprunner-alpha = "2.88.0a0"

[tool.ruff]
line-length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
