[project]
name = "infra"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Dante Oz", email = "me@danteoz.com" }]
requires-python = ">=3.12.2"
dependencies = [
    "aws-cdk-aws-apprunner-alpha>=2.135.0a0",
    "aws-cdk-lib>=2.135.0",
    "pydantic>=2.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
