[tool.dagster]
module_name = "fastpipeline"

[tool.poetry]
name = "fastpipeline"
version = "0.1.0"
description = "Scraping, transcription, embedding and indexing pipeline for FastSeach sematic search enginge."
authors = ["Dante Oz <me@danteoz.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
qdrant-client = "^1.5.4"
modal = "^0.53.3720"
dagster = "^1.5.0"
dagster-webserver = "^1.5.0"
grpcio = {version = "^1.47.5", source = "grpcio"}
polars = "^0.19.6"
yt-dlp = "^2023.9.24"
pytube = "^15.0.0"
duckdb = "^0.9.0"
mypy = "^1.5.1"
universal-pathlib = "^0.1.3"
s3fs = "^2023.9.2"
torch = "^2.1.0"
transformers = "^4.34.0"


[[tool.poetry.source]]
name = "grpcio"
url = "https://github.com/dagster-io/build-grpcio/wiki/Wheels"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
ruff = "^0.0.292"

[tool.ruff]
line-length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
