[tool.dagster]
module_name = "fastpipeline"

[tool.poetry]
name = "fastpipeline"
version = "0.1.0"
description = "Scraping, transcription, embedding and indexing pipeline for FastSeach sematic search enginge."
authors = ["Dante Oz <me@danteoz.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
qdrant-client = "^1.9.0"
modal = "^0.62.135"
dagster = "^1.7.3"
dagster-webserver = "^1.7.3"
polars = "^0.20.23"
yt-dlp = "^2023.9.24"
pytube = "^15.0.0"
duckdb = "^0.10.2"
universal-pathlib = "^0.1.3"
s3fs = "^2023.9.2"
torch = "^2.1.0"
transformers = "^4.34.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ruff = "^0.4.2"

[tool.ruff]
line-length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
