[project]
name = "fastpipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Dante Oz", email = "me@danteoz.com" }]
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.9.4",
    "dagster-webserver>=1.9.4",
    "duckdb>=1.1.3",
    "modal>=0.67.31",
    "polars>=1.16.0",
    "pytube>=15.0.0",
    "qdrant-client>=1.12.1",
    "s3fs>=2024.10.0",
    "torch>=2.5.1",
    "transformers>=4.47.0",
    "universal-pathlib>=0.2.5",
    "yt-dlp>=2024.12.6",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ruff>=0.8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "fastpipeline"

[tool.ruff]
line-length = 110
